methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol() ==  Color.green) {
    ^